--- a/index.html
+++ b/index.html
@@ -8,7 +8,8 @@
             <input type="checkbox" id="nav-check">
             <div class="custom-nav-header">
               <div class="custom-nav-log">
-                 <img src="./asset/logo_sm.png"/>
+                 <img src="./asset/logo_sm.png" class="logo-small"/>
+                 <!-- <img src="./asset/logo_sm.png" class="logo-large"/> -->
               </div>
             </div>
             <div class="custom-nav-btn">
